--- a/Machine Learning/pipeline.ipynb
+++ b/Machine Learning/pipeline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aff3607f",
+   "id": "654aa0ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6db08b00",
+   "id": "ef6452bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "eb9baebb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "0e4e01a7",
+   "id": "dd7c451d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1bafd03",
+   "id": "3f8a4576",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bc7555ad",
+   "id": "d825b1cf",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "24474271",
+   "id": "f8bd4d47",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "23e5bb9e",
+   "id": "4d082803",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7714fb85",
+   "id": "57d35ab5",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e8dbd685",
+   "id": "90a8e6d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ed936ccf",
+   "id": "fd3d2dca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4ac20131",
+   "id": "5914ceb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2bc8da85",
+   "id": "6b52f759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cf891ae6",
+   "id": "0232d938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "86db6fbb",
+   "id": "f3166136",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f7a79db4",
+   "id": "d11dd9f2",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c0326662",
+   "id": "f3b3d24e",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bebb3582",
+   "id": "5d0b1be5",
    "metadata": {},
    "outputs": [
     {
@@ -475,9 +485,548 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2daa3f9d",
+   "metadata": {},
+   "source": [
+    "## check accuracy and other stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "665f338c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 0, 2, 0, 2, 0, 2, 2, 1, 2, 1, 1, 2, 1, 0, 1, 1, 0, 0, 1, 1,\n",
+       "       0, 0, 2, 0, 0, 1, 1, 0, 2, 1, 0, 1, 2, 1, 0, 2, 1, 1, 2, 0, 2, 0,\n",
+       "       0])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# y_hat for linear regression\n",
+    "y_lr=pipeline_lr.predict(X_test)\n",
+    "y_lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c348538a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 0, 2, 0, 2, 0, 1, 1, 1, 2, 1, 1, 1, 1, 0, 1, 1, 0, 0, 2, 1,\n",
+       "       0, 0, 2, 0, 0, 1, 1, 0, 2, 1, 0, 2, 2, 1, 0, 1, 1, 1, 2, 0, 2, 0,\n",
+       "       0])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b2d73a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 0, 2, 0, 2, 0, 2, 2, 1, 2, 1, 1, 2, 1, 0, 1, 1, 0, 0, 1, 1,\n",
+       "       0, 0, 2, 0, 0, 1, 1, 0, 2, 1, 0, 1, 2, 1, 0, 2, 1, 1, 2, 0, 2, 0,\n",
+       "       0])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 0, 2, 0, 2, 0, 1, 1, 1, 2, 1, 1, 1, 1, 0, 1, 1, 0, 0, 2, 1,\n",
+       "       0, 0, 2, 0, 0, 1, 1, 0, 2, 1, 0, 2, 2, 1, 0, 1, 1, 1, 2, 0, 2, 0,\n",
+       "       0])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# print out y_hat and y_test\n",
+    "display(y_lr, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b4afcd74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_lr</th>\n",
+       "      <th>y test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    y_lr  y test\n",
+       "0      2       2\n",
+       "1      1       1\n",
+       "2      0       0\n",
+       "3      2       2\n",
+       "4      0       0\n",
+       "5      2       2\n",
+       "6      0       0\n",
+       "7      2       1\n",
+       "8      2       1\n",
+       "9      1       1\n",
+       "10     2       2\n",
+       "11     1       1\n",
+       "12     1       1\n",
+       "13     2       1\n",
+       "14     1       1\n",
+       "15     0       0\n",
+       "16     1       1\n",
+       "17     1       1\n",
+       "18     0       0\n",
+       "19     0       0\n",
+       "20     1       2\n",
+       "21     1       1\n",
+       "22     0       0\n",
+       "23     0       0\n",
+       "24     2       2\n",
+       "25     0       0\n",
+       "26     0       0\n",
+       "27     1       1\n",
+       "28     1       1\n",
+       "29     0       0\n",
+       "30     2       2\n",
+       "31     1       1\n",
+       "32     0       0\n",
+       "33     1       2\n",
+       "34     2       2\n",
+       "35     1       1\n",
+       "36     0       0\n",
+       "37     2       1\n",
+       "38     1       1\n",
+       "39     1       1\n",
+       "40     2       2\n",
+       "41     0       0\n",
+       "42     2       2\n",
+       "43     0       0\n",
+       "44     0       0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new = pd.concat([pd.DataFrame(y_lr,columns=['y_lr']),pd.DataFrame(y_test,columns=['y test']) ],axis=1)\n",
+    "df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0cf6cfe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[16,  0,  0],\n",
+       "       [ 0, 14,  4],\n",
+       "       [ 0,  2,  9]], dtype=int64)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test,y_lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8b1ce311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        16\n",
+      "           1       0.88      0.78      0.82        18\n",
+      "           2       0.69      0.82      0.75        11\n",
+      "\n",
+      "    accuracy                           0.87        45\n",
+      "   macro avg       0.86      0.87      0.86        45\n",
+      "weighted avg       0.87      0.87      0.87        45\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test,y_lr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "87637d04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6923076923076923"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(14/16,9/13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5379d3c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7777777777777778"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8181818181818182"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(14/18,9/11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e94170d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8666666666666667"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "39/45"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe586851",
+   "id": "b1334405",
    "metadata": {},
    "outputs": [],
    "source": []
